# qa-dataset-clustering

./: .gitignore  INSTALL.md  README.md  USAGE.md  pyproject.toml  run_matrix_tests.sh
clusx/: __main__.py  cli.py  evaluation.py
clusx/clustering/: models.py  utils.py
qadst/: __init__.py  __main__.py  base.py  benchmarker.py  cli.py  clusterer.py  embeddings.py  logging.py  version.py
qadst/clustering/: __init__.py  cache.py  models.py  utils.py
tests/: conftest.py  test_base_clusterer.py  test_benchmarker.py  test_cli.py  test_clusterer.py  test_embeddings.py  test_evaluation.py
